[package]
name = "podstats"
version = "0.1.2"
authors = ["Andrew Michaud <dev@mail.andrewmichaud.com>"]
license = "BSD-3-Clause"
keywords = ["podcasts", "statistics", "puckfetcher"]
description = "provides stats on the cache used by puckfetcher"
documentation = "https://docs.rs/crate/podstats"
homepage = "https://github.com/andrewmichaud/podstats"
repository = "https://github.com/andrewmichaud/podstats"

[dependencies]
clap = "^2.24.1"
itertools = "^0.6.0"
rmp = "^0.8.6"
rmp-serde = "^0.13.1"
serde = "1.0.0"
serde_derive = "^1.0.2"
serde_yaml = "^0.7.0"
termion = "^1.3.0"
xdg = "^2.1.0"

[lib]
name = "libpodstats"
path = "src/lib.rs"

[[bin]]
name = "podstats"
path = "src/main.rs"
