[package]
name = "podstats"
version = "0.2.0"
authors = ["Andrew Michaud <dev@mail.andrewmichaud.com>"]
license = "BSD-3-Clause"
keywords = ["podcasts", "statistics", "puckfetcher"]
description = "provides stats on the cache used by puckfetcher"
documentation = "https://docs.rs/crate/podstats"
homepage = "https://github.com/andrewmichaud/podstats"
repository = "https://github.com/andrewmichaud/podstats"

[dependencies]
anymap = "^0.12.1"
clap = "^2.27.1"
itertools = "^0.7.3"
rmp = "^0.8.6"
rmp-serde = "^0.13.7"
serde = "1.0.2"
serde_derive = "^1.0.21"
serde_yaml = "^0.7.2"
termion = "^1.5.1"
xdg = "^2.1.0"

[lib]
name = "libpodstats"
path = "src/lib.rs"

[[bin]]
name = "podstats"
path = "src/main.rs"
